website front end done and connected to the backend

--- a/website/home/templates/home.html
+++ b/website/home/templates/home.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,14 +28,14 @@
       <div class="risk-button-area">
         <a href="{% url 'prediction_form' %}" class="risk-button">Find Your Risk Today!</a>
       </div>
-
     </div>
     <img src="{% static 'home/bp_measuring.jpeg' %}" alt="BP MEASUREING IMG">
   </div>
   <div class="content">
     <div class="section-1">
       <div class="section-1-text">
-        <p id="section-heading">What is hypertension?
+        <p id="section-heading">
+          What is hypertension?
         <p>
         <p>
           High blood pressure is a common condition that affects the body's arteries. It's also
@@ -105,8 +105,7 @@
           <li>Abnormal heart rhythm</li>
         </div>
       </ul>
-      <p>
-      </p>
+      <p></p>
     </div>
   </div>
   <p>
