added disclaimer message and page title for the home page

--- a/website/home/templates/home.html
+++ b/website/home/templates/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
+  <title>HyperCheck</title>
   {% load static %}
   <link href="{% static 'home/style.css' %}" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Nunito+Sans:wght@400;700&display=swap"
@@ -110,11 +110,12 @@
   </div>
   <p>
   <div class="footer">
-    Remember: Our AI models provide risk insights, but they’re not a diagnosis. If you’re unsure
-    about your blood pressure, we encourage regular checkups to keep yourself safe from any
-    heart related issues.
-    </p>
+    Remember: Our AI models provide risk insights, but they’re not a diagnosis. We encourage regular checkups to keep
+    yourself safe from any heart related issues.
+    <br>
+    Disclaimer: This is a hobby project for educational purposes only, not a real medical tool.
   </div>
+  </p>
 </body>
 
 </html>
