--- a/website/assets/predictions/style.css
+++ b/website/assets/predictions/style.css
@@ -65,8 +65,8 @@ h1 {
 }
 
 .buttons {
-  width: 338px;
   display: flex;
+  justify-content: center;
   list-style: none;
   margin: 30px 0 0 0;
   padding: 0;
@@ -123,7 +123,6 @@ h1 {
 .user-form button:hover,
 .home-button:hover {
   color: #25c3e2;
-  /* text takes over color when bg gone */
 }
 
 .results {
