--- a/website/predictions/templates/prediction_form.html
+++ b/website/predictions/templates/prediction_form.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>hypertension risk predictor</title>
+  <title>Risk Predictor</title>
   {% load static %}
   <link href="{% static 'predictions/style.css' %}" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Nunito+Sans:wght@400;700&display=swap"
